Require benchmarkers to submit discarded solution nonces.
